# rust-templates

./: cargo-generate.toml
actix-web-template/: .envrc  .gitignore  Cargo.toml  justfile
actix-web-template/docker/postgres/: docker-compose.yaml
actix-web-template/docker/postgres/config/: servers.json
actix-web-template/migrations/: 20010101010101_init.down.sql  20010101010101_init.up.sql  20010101010102_create_users.up.sql
actix-web-template/src/: bearer_auth.rs  claims.rs  cors.rs  db.rs  env_args.rs  errors.rs  jwt.rs  lib.rs  main.rs  models.rs  routes.rs  state.rs  token.rs
actix-web-template/src/claims/: user_claims.rs
actix-web-template/src/errors/: app_error.rs  app_response_error.rs  to_app_result.rs
actix-web-template/src/models/: users.rs
actix-web-template/src/models/users/: user.rs  user_id.rs
actix-web-template/src/util_types/: maybe.rs
sauron-template/: Cargo.toml  justfile
sauron-template/lib/: Cargo.toml
sauron-template/lib/src/: app.rs  lib.rs  model.rs  msg.rs
sauron-template/web/: package.json
sauron-template/web/src/: main.ts
seed-template/: Cargo.toml  justfile
seed-template/app/: Cargo.toml
seed-template/app/src/: init.rs  lib.rs  states.rs  views.rs
seed-template/app/src/states/: messages.rs  models.rs  updators.rs
seed-template/site/: index.html
sycamore-template/: Cargo.toml  justfile
sycamore-template/app/: Cargo.toml
sycamore-template/app/src/: lib.rs
sycamore-template/www/: index.html  package.json
sycamore-template/www/src/: main.ts
yew-template/: justfile
yew-template/app/: Cargo.toml
yew-template/app/src/: app.rs  components.rs  lib.rs  store.rs  utils.rs
yew-template/app/src/components/: button.rs  counter.rs  skelton.tmplate
yew-template/web/: index.html  package.json  tailwind.config.ts  vite.config.ts
yew-template/web/src/: main.ts
