[package]
name = "employee_lib"
edition = { workspace = true }
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
sauron = { version = "0.60" }
console_error_panic_hook = { version = "0.1" }
log = { version = "0.4" }
console_log = { version = "1.0", features = ["color"] }
