[package]
name = "{{project-name | snake_case}}_app"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = { version = "0.3" }

[dependencies]
seed = { version = "0.10" }
gloo-console = { version = "0.3" }
ulid = { version = "1.1" }
wasm-bindgen = { version = "0.2" }

[package.metadata.wasm-pack.profile.release]
wasm-opt = ['-Os']
