[package]
name = "app"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
sycamore = { version = "0.9.0-beta.2" }
console_error_panic_hook = { version = "0.1" }
console_log = { version = "1.0" }
log = { version = "0.4" }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3" }
