[package]
name = "{{project-name}}"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2" }
yew = { version = "0.21", features = ["csr"] }
console_error_panic_hook = { version = "0.1" }
console_log = { version = "1.0", features = ["color"] }
log = { version = "0.4" }
web-sys = { version = "0.3" }

[package.metadata.wasm-pack.release]
wasm-opt = ["-Os"]
