[package]
name = "{{project-name}}"
version = { workspace = true }
edition = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1" }
console_log = { version = "1.0", features = ["color"] }
log = { version = "0.4" }
stylist = { version = "0.13", features = ["yew_integration", "parser"] }
wasm-bindgen = { version = "0.2" }
web-sys = { version = "0.3" }
yew = { version = "0.21", features = ["csr"] }
yew-autoprops = { version = "0.4" }
yew-html-ext = { version = "0.1" }
yewdux = { version = "0.10" }
gloo-net = { version = "0.5", default-features = false, features = [
    "json",
    "http",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
error-stack = { version = "0.4" }


[package.metadata.wasm-pack.release]
wasm-opt = ["-Os"]
